# BudgetApp

./: .gitignore  CMakeLists.txt  build.bat  build.sh  readme.md
shaders/: main.frag.glsl  main.vert.glsl
src/: app.c  main.c
src/UICrafter/: Container.c  Container.h  WndCtx.c  crafter.c  crafter.h  mesh.c  mesh.h  shaders.c  shaders.h  widget.c  widget.h  wnd.c  wnd.h
src/UICrafter/components/: components.h
src/UICrafter/primatives/: mesh.c  mesh.h  shaders.c  shaders.h
src/crafter/: crafter.c  crafter.h  widget.c  widget.h  wnd.h
src/crafter/elements/: button.c  elements.h
src/crafter/primatives/: mesh.c  mesh.h  shaders.h
src/crafter/render/: mesh.c  mesh.h  renderer.c  renderer.h  shaders.c  shaders.h  wnd.c  wnd.h
src/crafter/render/meshes/: mesh.c  mesh.h  vertex.c  vertex.h
src/gui/: components.c  components.h  elements.c  elements.h  gui.c  gui.h  render.c  render.h  shader.c  shader.h  window.c  window.h
